--- a/ViewGeneratorServ/package.json
+++ b/ViewGeneratorServ/package.json
@@ -10,10 +10,13 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
+    "typeface-montserrat": "^1.1.13",
+    "typeface-pacifico": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
