--- a/ViewGeneratorServ/package.json
+++ b/ViewGeneratorServ/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
